--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DATABASE_URL=postgresql+psycopg2://postgres.ofdddnrikjxcqzphwcid:a9511818a%21%21
 SUPABASE_PROJECT_REF=
 
 ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://172.30.1.51:3000
-
+REACT_APP_API_BASE=https://freedy-api.onrender.com
 # 실행 명령어 안내
 # uvicorn app:app --reload --port 8000
 # http://127.0.0.1:8000/health → {"ok": true} 나오면 정상.
