--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 DATABASE_URL=postgresql+psycopg2://postgres.ofdddnrikjxcqzphwcid:a9511818a%21%21@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres?sslmode=require
 SUPABASE_PROJECT_REF=
 
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://172.30.1.51:3000
+ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://172.30.1.51:3000,https://freedy.co.kr,https://www.freedy.co.kr
 REACT_APP_API_BASE=https://freedy-api.onrender.com
 # 실행 명령어 안내
 # uvicorn app:app --reload --port 8000
